+ WinScreen, HUD for a Stopwatch display, trying on win conditions

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MainMenu.MainMenu
 EditorStartupMap=/Game/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/UI/MMGameModeBase.MMGameModeBase_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
