--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7BD54A0B4B44178CA2AB379EDAF96315
+Description=Move the ball closer
+ProjectName=Move the ball closer
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
